--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
       </section>
       <!-- Banner Section -->
       <section>
-        <div class="video-section relative w-full h-screen overflow-hidden">
+        <div class="video-section relative w-full overflow-hidden">
           <video class="" autoplay loop muted>
             <source src="./assets/Header-banner.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
           <div
-            class="absolute left-1/2 lg:top-1/3 top-1/4 translate-x-[-50%] lg:translate-y-[-50%] translate-y-[-70%] text-center"
+            class="absolute left-1/2 lg:top-1/3 top-1/4 lg:translate-x-[-50%] lg:translate-y-[-50%] translate-y-[-70% ] translate-x-[-50%] text-center"
           >
             <h1
               class="text-3xl lg:text-5xl font-extrabold text-[#fff] font-family-inter"
@@ -153,46 +153,152 @@
       </section>
     </header>
     <!-- Main Section -->
-    <section class="bg-bglightgray">
-      <div class="container mx-auto mt-20">
-        <div class="flex items-stretch gap-6 py-20">
-          <!-- content -->
-          <div class="flex-1">
-            <h2 class="bg-white w-28 mb-5 p-2 rounded-xl text-base">
-              <i class="fa-solid fa-arrow-right"></i> About Us
+    <section class="bg-bglightgray mt-2 lg:mt-20 overflow-hidden pb-14">
+      <div class="card lg:card-side container mx-auto py-20">
+        <div class="card-body lg:w-1/2">
+          <h2 class="bg-white w-28 mb-5 p-2 rounded-xl text-base">
+            <i class="fa-solid fa-arrow-right"></i> About Us
+          </h2>
+          <h3 class="font-bold text-4xl">
+            We design thoughtful,<br />liveable spaces
+          </h3>
+          <p class="text-base mt-5">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents. We
+            are focusing on the passion of quality and unique something. We are
+            5 years+ experience on the field and 300+ projects on going. We have
+            completed 34000+ projects and 100% satisfication.
+          </p>
+          <div
+            class="business-category flex flex-col md:flex-row md:gap-5 lg:flex-col"
+          >
+            <div
+              class="commercial bg-white flex justify-start mt-3 rounded-xl items-center gap-3 py-4 px-3"
+            >
+              <div class="icon">
+                <img src="./assets/commercial.png" alt="Commercial Icon" />
+              </div>
+              <div class="content">
+                <h3 class="text-2xl font-bold">Commercial</h3>
+                <p class="text-base">
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+              </div>
+            </div>
+            <div
+              class="commercial bg-white flex justify-start mt-3 rounded-xl items-center gap-3 py-4 px-3"
+            >
+              <div class="icon">
+                <img src="./assets/residential.png" alt="Commercial Icon" />
+              </div>
+              <div class="content">
+                <h3 class="text-2xl font-bold">Residential</h3>
+                <p class="text-base">
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <figure class="lg:w-1/2 rounded-xl">
+          <img class="rounded-xl" src="./assets/Rectangle.png" alt="Home" />
+        </figure>
+      </div>
+      <!-- Countup number of client -->
+      <div
+        class="container mx-auto bg-white flex flex-col md:flex-wrap md:flex-row lg:flex-nowrap justify-between lg:gap-5 md:gap-y-3 md:py-7 lg:p-11 py-9 gap-y-4 items-center rounded-xl"
+      >
+        <div class="text-center leading-8 w-full md:w-1/2 lg:w-1/4">
+          <i class="fa-regular fa-message"></i>
+          <h3 class="text-2xl font-bold text-[#494949]">235+</h3>
+          <p class="text-[#494949]">Happy Client Review</p>
+        </div>
+        <div class="text-center leading-8 w-full md:w-1/2 lg:w-1/4">
+          <i class="fa-regular fa-building"></i>
+          <h3 class="text-2xl font-bold text-[#494949]">45+</h3>
+          <p class="text-[#494949]">Work Department</p>
+        </div>
+        <div class="text-center leading-8 w-full md:w-1/2 lg:w-1/4">
+          <i class="fa-solid fa-people-arrows"></i>
+          <h3 class="text-2xl font-bold text-[#494949]">30k+</h3>
+          <p class="text-[#494949]">Happy client</p>
+        </div>
+        <div class="text-center leading-8 w-full md:w-1/2 lg:w-1/4">
+          <i class="fa-solid fa-person-cane"></i>
+          <h3 class="text-2xl font-bold text-[#494949]">307+</h3>
+          <p class="text-[#494949]">Staff Member</p>
+        </div>
+      </div>
+      <!-- Working Process -->
+
+      <div class="container mx-auto">
+        <div>
+          <!-- Working process heading -->
+          <div class="mt-20 flex flex-col justify-center items-center">
+            <h2 class="bg-white w-40 mb-5 p-2 rounded-xl text-base">
+              <i class="fa-solid fa-arrow-right"></i> How We Works
             </h2>
-            <h3 class="font-bold text-4xl">
-              We design thoughtful, liveable spaces
-            </h3>
-            <p class="text-base mb-5 mt-5">
+            <h3 class="font-bold text-4xl">Our Working Process</h3>
+            <p class="text-base mt-5 w-3/4 mx-auto mb-5">
               The barn house captivates with its blend of rustic charm and
               modern sophistication, featuring weathered wood, sleek metal
               accents.
             </p>
-            <div class="business-category">
-              <div
-                class="commercial bg-white flex justify-start mt-3 rounded-xl items-center gap-3 py-4 px-3"
-              >
-                <div class="icon">
-                  <img src="./assets/commercial.png" alt="Commercial Icon" />
-                </div>
-                <div class="content">
-                  <h3 class="text-2xl font-bold">Commercial</h3>
-                  <p class="text-base">
+          </div>
+          <!-- Working process content -->
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+            <div class="bg-[#E7C1D3] rounded-lg p-4">
+              <div class="">
+                <figure>
+                  <img src="./assets/concept.png" alt="Concept" />
+                </figure>
+                <div class="">
+                  <h2 class="card-title">Concept</h2>
+                  <p>
                     The barn house captivates with its blend of rustic charm and
                     modern.
                   </p>
                 </div>
               </div>
-              <div
-                class="commercial bg-white flex justify-start mt-3 rounded-xl items-center gap-3 py-4 px-3"
-              >
-                <div class="icon">
-                  <img src="./assets/residential.png" alt="Commercial Icon" />
+            </div>
+            <div class="bg-[#EFDA6E] rounded-lg p-4">
+              <div class="">
+                <figure>
+                  <img src="./assets/concept.png" alt="Concept" />
+                </figure>
+                <div class="">
+                  <h2 class="card-title">Concept</h2>
+                  <p>
+                    The barn house captivates with its blend of rustic charm and
+                    modern.
+                  </p>
                 </div>
-                <div class="content">
-                  <h3 class="text-2xl font-bold">Residential</h3>
-                  <p class="text-base">
+              </div>
+            </div>
+            <div class="bg-[#A4DAC3] rounded-lg p-4">
+              <div class="">
+                <figure>
+                  <img src="./assets/concept.png" alt="Concept" />
+                </figure>
+                <div class="">
+                  <h2 class="card-title">Concept</h2>
+                  <p>
+                    The barn house captivates with its blend of rustic charm and
+                    modern.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="bg-[#77AAEA] rounded-lg p-4">
+              <div class="">
+                <figure>
+                  <img src="./assets/concept.png" alt="Concept" />
+                </figure>
+                <div class="">
+                  <h2 class="card-title">Concept</h2>
+                  <p>
                     The barn house captivates with its blend of rustic charm and
                     modern.
                   </p>
@@ -200,13 +306,22 @@
               </div>
             </div>
           </div>
-          <!-- image -->
-
-          <img
-            class="h-full flex-1 block object-cover"
-            src="./assets/Rectangle.png"
-            alt="Home"
-          />
+        </div>
+      </div>
+    </section>
+    <!-- Porfolio Section -->
+    <section class="bg-white mt-5">
+      <div class="container mx-auto">
+        <!-- Portfolio heading -->
+        <div class="mt-8 flex flex-col justify-center items-center">
+          <h2 class="bg-[#ABEF5F] w-60 mb-5 p-2 rounded-xl text-base">
+            <i class="fa-solid fa-arrow-right"></i> Explore our Latest works
+          </h2>
+          <h3 class="font-bold text-4xl">Our Latest Portfolio</h3>
+          <p class="text-base mt-5 w-3/4 mx-auto mb-5">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents.
+          </p>
         </div>
       </div>
     </section>
