--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
                 <button class="cursor-pointer mr-3">
                   <i class="fa-solid fa-cart-shopping"></i>
                 </button>
-                <button class="cursor-pointer bg-uprimary p-2 rounded-2xl">
+                <button
+                  class="cursor-pointer bg-uprimary p-2 rounded-2xl transition delay-150 duration-300 ease-in-out hover:scale-101 hover:bg-[#6ea134]"
+                >
                   Book Consult
                   <i
                     class="fa-solid fa-arrow-right -rotate-45 text-utext bg-black rounded-full p-1"
@@ -100,7 +102,7 @@
                 </div>
                 <div
                   tabindex="0"
-                  class="menu menu-md dropdown-content bg-base-100 z-1 mt-4 p-2 w-52 shadow-md dropdown-content-css"
+                  class="menu menu-md dropdown-content z-1 mt-4 p-2 w-52 shadow-md dropdown-content-css rounded-lg bg-black/30"
                 >
                   <ul class="w-full">
                     <li><a>Home</a></li>
@@ -115,7 +117,9 @@
                     <button class="cursor-pointer">
                       <i class="fa-solid fa-cart-shopping"></i>
                     </button>
-                    <button class="cursor-pointer bg-uprimary p-2 rounded-2xl">
+                    <button
+                      class="cursor-pointer bg-uprimary p-2 rounded-2xl transition delay-150 duration-300 ease-in-out hover:scale-101 hover:bg-[#6ea134]"
+                    >
                       Book Consult
                       <i class="fa-solid fa-arrow-right -rotate-45"></i>
                     </button>
@@ -142,7 +146,7 @@
               The Passion for quality
             </h1>
             <button
-              class="cursor-pointer font-bold bg-[#7fc332] text-white px-3 py-2 lg:mt-7 mt-3 rounded-2xl"
+              class="cursor-pointer font-bold bg-[#7fc332] text-white px-3 py-2 lg:mt-7 mt-3 rounded-2xl transition delay-150 duration-300 ease-in-out hover:scale-101 hover:bg-[#6ea134]"
             >
               Book Now
               <i
@@ -380,7 +384,7 @@
         <div class="flex flex-col lg:flex-row mt-7 gap-5 items-center">
           <!-- image -->
           <div
-            class="w-full lg:w-1/4 h-44 rounded-xl border-1 border-gray-300 p-4 shadow-lg"
+            class="w-full lg:w-1/4 hidden lg:h-44 lg:block rounded-xl border-1 border-gray-300 p-4 shadow-lg"
           >
             <img
               class="w-full h-full object-cover rounded-xl"
@@ -420,7 +424,7 @@
           </div>
           <!-- image -->
           <div
-            class="w-full lg:w-1/4 h-44 rounded-xl border-1 border-gray-300 p-4 shadow-lg"
+            class="w-full lg:w-1/4 h-auto lg:h-44 rounded-xl border-1 border-gray-300 p-4 shadow-lg"
           >
             <img
               class="w-full h-full object-cover rounded-xl"
@@ -435,7 +439,9 @@
     <section class="bg-bglightgray">
       <div class="container mx-auto">
         <!-- Blog heading -->
-        <div class="flex flex-col justify-center items-center mt-9 py-9">
+        <div
+          class="flex flex-col justify-center items-center mt-9 py-9 text-center"
+        >
           <h2 class="bg-[#ABEF5F] w-40 mb-5 p-2 rounded-xl text-base">
             <i class="fa-solid fa-arrow-right"></i> Uinterior News
           </h2>
@@ -553,35 +559,142 @@
     <section
       class="bg-[url(./assets/bg.jpg)] bg-no-repeat bg-cover bg-center w-full my-5"
     >
-      <div class="w-2/3 mx-auto h-[921px]">
-        <h2>Let's Discus Next Project</h2>
+      <div class="md:w-2/3 w-full p-3 mx-auto h-auto md:h-[921px]">
+        <!-- Contact heading -->
+        <div
+          class="flex flex-col justify-center items-center mt-9 py-9 text-center"
+        >
+          <h2 class="bg-[#ABEF5F] w-40 mb-5 p-2 rounded-xl text-base">
+            <i class="fa-solid fa-arrow-right"></i> Let's Connect
+          </h2>
+          <h3 class="font-bold text-4xl">Let's Discuss Next Project</h3>
+          <p class="text-base mt-5 w-3/4 mx-auto mb-5 text-center">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents.
+          </p>
+        </div>
+        <!-- Input Form -->
+        <form action="">
+          <div
+            class="input-group grid grid-cols-1 sm:grid-cols-2 justify-between items-center gap-5"
+          >
+            <input
+              class="rounded-xl p-4 bg-white text-[#494949] border-none focus:outline focus:border-gray-600 focus:border-1"
+              type="text"
+              name="first-name"
+              id="first-name"
+              placeholder="First Name*"
+              required
+            />
+            <input
+              class="rounded-xl p-4 bg-white text-[#494949] border-none focus:outline focus:border-gray-600 focus:border-1"
+              type="text"
+              name="last-name"
+              id="last-name"
+              placeholder="Last Name*"
+              required
+            />
+            <input
+              class="rounded-xl p-4 bg-white text-[#494949] border-none focus:outline focus:border-gray-600 focus:border-1"
+              type="text"
+              name="phone"
+              id="phone"
+              placeholder="Phone Number*"
+              required
+            />
+            <input
+              class="rounded-xl p-4 bg-white text-[#494949] border-none focus:outline focus:border-gray-600 focus:border-1"
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Email*"
+              required
+            />
+          </div>
+          <textarea
+            class="w-full rounded-3xl bg-white p-4 mt-5 border-none md:resize-none resize-y text-[#494949] focus:outline focus:border-gray-600 focus:border-1"
+            name="message"
+            id="message"
+            rows="10"
+            placeholder="Write your message here"
+          ></textarea>
+          <button
+            class="cursor-pointer font-bold text-lg text-center mt-4 bg-[#ABEF5F] w-full p-4 rounded-xl transition delay-150 duration-300 ease-in-out hover:scale-101 hover:bg-[#6ea134]"
+          >
+            Send Mail
+            <i
+              class="fa-solid fa-arrow-right -rotate-45 text-utext bg-[#1C1C1C] rounded-full p-1"
+            ></i>
+          </button>
+        </form>
       </div>
     </section>
     <!-- Footer Section -->
     <section>
-      <footer
-        class="footer sm:footer-horizontal bg-[#1E1E1E] text-neutral-content p-10"
-      >
-        <nav>
-          <h6 class="footer-title">Services</h6>
-          <a class="link link-hover">Branding</a>
-          <a class="link link-hover">Design</a>
-          <a class="link link-hover">Marketing</a>
-          <a class="link link-hover">Advertisement</a>
-        </nav>
-        <nav>
-          <h6 class="footer-title">Company</h6>
-          <a class="link link-hover">About us</a>
-          <a class="link link-hover">Contact</a>
-          <a class="link link-hover">Jobs</a>
-          <a class="link link-hover">Press kit</a>
-        </nav>
-        <nav>
-          <h6 class="footer-title">Legal</h6>
-          <a class="link link-hover">Terms of use</a>
-          <a class="link link-hover">Privacy policy</a>
-          <a class="link link-hover">Cookie policy</a>
-        </nav>
+      <footer class="bg-[#1E1E1E]">
+        <div class="container mx-auto">
+          <!-- Footer heading -->
+          <div
+            class="flex flex-col justify-center items-center mt-9 py-9 text-white"
+          >
+            <h2 class="mb-5 p-2 rounded-xl text-2xl font-extrabold">
+              <i
+                class="bg-[#ABEF5F] fa-solid fa-arrow-right p-1 rounded-full -rotate-45 text-black"
+              ></i>
+              Uinterior
+            </h2>
+            <p class="mt-5 w-3/4 mx-auto mb-5 text-center">
+              The barn house captivates with its blend of rustic charm and
+              modern sophistication, featuring weathered wood, sleek metal
+              accents.
+            </p>
+          </div>
+          <!-- Footer Nav -->
+          <div class="footer sm:footer-horizontal text-neutral-content p-10">
+            <nav>
+              <h6 class="footer-title">Services</h6>
+              <a class="link link-hover">Branding</a>
+              <a class="link link-hover">Design</a>
+              <a class="link link-hover">Interior Design</a>
+              <a class="link link-hover">Interior Installment</a>
+            </nav>
+            <nav>
+              <h6 class="footer-title">Company</h6>
+              <a class="link link-hover">About us</a>
+              <a class="link link-hover">Contact</a>
+              <a class="link link-hover">Career</a>
+              <a class="link link-hover">Press</a>
+            </nav>
+            <nav>
+              <h6 class="footer-title">Legality</h6>
+              <a class="link link-hover">Privacy policy</a>
+              <a class="link link-hover">Payment policy</a>
+              <a class="link link-hover">Cookie policy</a>
+              <a class="link link-hover">Sitemap</a>
+            </nav>
+          </div>
+          <div
+            class="footer text-neutral-content pl-10 pb-5 flex justify-start items-center gap-x-4 text-start font-bold"
+          >
+            <p>Follow Us:</p>
+            <a href="https://www.facebook.com"
+              ><i class="fa-brands fa-facebook text-[#1877F2]"></i
+            ></a>
+            <a href="https://www.pinterest.com"
+              ><i class="fa-brands fa-pinterest text-[#E60023]"></i
+            ></a>
+            <a href="https://www.instagram.com"
+              ><i class="fa-brands fa-square-instagram"></i
+            ></a>
+            <a href="https://www.x.com"
+              ><i class="fa-brands fa-x-twitter text-[]"></i
+            ></a>
+          </div>
+          <hr class="border-none h-[1.8px] w-full bg-[#494949] mb-4" />
+          <p class="text-white text-sm italic font-medium text-center pb-5">
+            &copy; 2025 All right of Uinterior are reserved
+          </p>
+        </div>
       </footer>
     </section>
   </body>
