--- a/index.html
+++ b/index.html
@@ -21,11 +21,20 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <!-- Custom css -->
+    <link rel="stylesheet" href="./styles.css" />
     <!-- Font Awesome Kit -->
     <script
       src="https://kit.fontawesome.com/4d5669a12e.js"
       crossorigin="anonymous"
     ></script>
+    <!-- GSAP CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+    <!-- Load GSAP Core -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+
+    <!-- Load ScrollTrigger Plugin -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
     <style>
       .font-family-poppins {
         font-family: "Poppins", sans-serif;
@@ -160,7 +169,7 @@
     <!-- Main Section -->
     <section class="bg-bglightgray mt-2 lg:mt-20 overflow-hidden pb-14">
       <div class="card lg:card-side container mx-auto py-20">
-        <div class="card-body lg:w-1/2 lg:relative">
+        <div class="card-body lg:w-1/2 lg:relative aboutContent">
           <img
             class="w-24 top-[-20px] left-[2px] hidden lg:block lg:absolute"
             src="./assets/Vector.png"
@@ -217,7 +226,7 @@
             </div>
           </div>
         </div>
-        <figure class="lg:w-1/2 rounded-xl">
+        <figure class="lg:w-1/2 rounded-xl aboutSectionImage">
           <img class="rounded-xl" src="./assets/Rectangle.png" alt="Home" />
         </figure>
       </div>
@@ -251,7 +260,9 @@
       <div class="container mx-auto">
         <div>
           <!-- Working process heading -->
-          <div class="mt-20 flex flex-col justify-center items-center">
+          <div
+            class="mt-20 flex flex-col justify-center items-center workingProcessHeading"
+          >
             <h2 class="bg-white w-40 mb-5 p-2 rounded-xl text-base">
               <i class="fa-solid fa-arrow-right"></i> How We Works
             </h2>
@@ -263,7 +274,9 @@
             </p>
           </div>
           <!-- Working process content -->
-          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+          <div
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 workingProcessContent"
+          >
             <div class="bg-[#E7C1D3] rounded-lg p-4">
               <div class="">
                 <figure>
@@ -328,7 +341,9 @@
     <section class="bg-white mt-5">
       <div class="container mx-auto">
         <!-- Portfolio heading -->
-        <div class="mt-8 flex flex-col justify-center items-center">
+        <div
+          class="mt-8 flex flex-col justify-center items-center portfolioHeading"
+        >
           <h2 class="bg-[#ABEF5F] w-60 mb-5 p-2 rounded-xl text-base">
             <i class="fa-solid fa-arrow-right"></i> Explore our Latest works
           </h2>
@@ -340,7 +355,7 @@
         </div>
         <!-- Portfolio project -->
         <div
-          class="flex flex-col md:flex-col lg:flex-row gap-x-4 gap-y-5 md:gap-y-3 items-center justify-between"
+          class="flex flex-col md:flex-col lg:flex-row gap-x-4 gap-y-5 md:gap-y-3 items-center justify-between commercialProject"
         >
           <div
             class="flex flex-col sm:flex-row items-start justify-start mt-5 border-1 border-gray-300 shadow-md p-4 gap-x-5 rounded-xl md:w-full w-4/5"
@@ -381,7 +396,9 @@
           </div>
         </div>
         <!-- Residential content -->
-        <div class="flex flex-col lg:flex-row mt-7 gap-5 items-center">
+        <div
+          class="flex flex-col lg:flex-row mt-7 gap-5 items-center residentialProject"
+        >
           <!-- image -->
           <div
             class="w-full lg:w-1/4 hidden lg:h-44 lg:block rounded-xl border-1 border-gray-300 p-4 shadow-lg"
@@ -440,7 +457,7 @@
       <div class="container mx-auto">
         <!-- Blog heading -->
         <div
-          class="flex flex-col justify-center items-center mt-9 py-9 text-center"
+          class="flex flex-col justify-center items-center mt-9 py-9 text-center blogHeading"
         >
           <h2 class="bg-[#ABEF5F] w-40 mb-5 p-2 rounded-xl text-base">
             <i class="fa-solid fa-arrow-right"></i> Uinterior News
@@ -453,7 +470,7 @@
         </div>
         <!-- Blog content -->
         <div
-          class="pb-9 flex flex-col lg:flex-row justify-center items-center gap-4"
+          class="pb-9 flex flex-col lg:flex-row justify-center items-center gap-4 blogContent"
         >
           <!-- Single Article -->
           <div
@@ -562,7 +579,7 @@
       <div class="md:w-2/3 w-full p-3 mx-auto h-auto md:h-[921px]">
         <!-- Contact heading -->
         <div
-          class="flex flex-col justify-center items-center mt-9 py-9 text-center"
+          class="flex flex-col justify-center items-center mt-9 py-9 text-center formHeading"
         >
           <h2 class="bg-[#ABEF5F] w-40 mb-5 p-2 rounded-xl text-base">
             <i class="fa-solid fa-arrow-right"></i> Let's Connect
@@ -697,5 +714,6 @@
         </div>
       </footer>
     </section>
+    <script src="./script.js"></script>
   </body>
 </html>
